@@ -1,4 +1,4 @@
-// -*- C++ -*- Time-stamp: <06/12/18 19:58:56 ptr>
+// -*- C++ -*- Time-stamp: <07/01/29 15:36:45 ptr>
 
 /*
  * Copyright (c) 2006
@@ -22,12 +22,18 @@ mt_test_suite::mt_test_suite() :
   test_case *pid_tc = BOOST_CLASS_TEST_CASE( &mt_test::pid, instance );
   test_case *shm_segment_tc = BOOST_CLASS_TEST_CASE( &mt_test::shm_segment, instance );
   test_case *shm_alloc_tc = BOOST_CLASS_TEST_CASE( &mt_test::shm_alloc, instance );
+  test_case *fork_shm_tc = BOOST_CLASS_TEST_CASE( &mt_test::fork_shm, instance );
+  test_case *shm_nm_obj_tc = BOOST_CLASS_TEST_CASE( &mt_test::shm_named_obj, instance );
 
   pid_tc->depends_on( fork_tc );
   shm_alloc_tc->depends_on( shm_segment_tc );
+  fork_shm_tc->depends_on( shm_alloc_tc );
+  shm_nm_obj_tc->depends_on( fork_shm_tc );
 
   add( fork_tc );
   add( pid_tc );
   add( shm_segment_tc );
   add( shm_alloc_tc );
+  add( fork_shm_tc, 0, 5 );
+  add( shm_nm_obj_tc, 0, 5 );
 };
